# FlappyBirdStyleGame

./: .gitignore  CMakeLists.txt  savefile.json
src/: Asteroid.cpp  Asteroid.hpp  BackgroundElement.hpp  BackgroundElementManager.cpp  BackgroundElementManager.hpp  CameraShake.cpp  CameraShake.hpp  Collision.hpp  DataManager.cpp  DataManager.hpp  Entity.hpp  Inventory.cpp  Inventory.hpp  InventorySlot.cpp  InventorySlot.hpp  Item.cpp  Item.hpp  NearbyItemsPanel.cpp  NearbyItemsPanel.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  SaveLoad.cpp  SaveLoad.hpp  SpaceObjectManager.cpp  SpaceObjectManager.hpp  Star.cpp  UIManager.cpp  UIManager.hpp  VisualEffects.cpp  VisualEffects.hpp  WorldItem.cpp  WorldItem.hpp  WorldItemManager.cpp  WorldItemManager.hpp  asteroid.cpp  asteroid.hpp  datamanager.cpp  datamanager.hpp  (+7 more)
src/UI/: HUD.cpp  HUD.hpp  UIManager.cpp  UIManager.hpp
src/UI/UIElements/: Dockable.cpp  Dockable.hpp  RectangleShape.cpp  RectangleShape.hpp  Text.cpp  Text.hpp
src/scenes/: InGame.cpp  InGame.hpp  MainMenu.cpp  MainMenu.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Settings.cpp  Settings.hpp
